--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
         <url>https://github.com/Naoghuman/app-notification.git</url>
     </scm>
     
+    <ciManagement>
+        <system>Travis</system>
+        <url>https://travis-ci.org/Naoghuman/app-notification</url>
+    </ciManagement>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -112,17 +117,31 @@
         <finalName>${project.artifactId}-${project.version}</finalName>
     </build>
     
+    <repositories>
+        <repository>
+            <id>objectdb</id>
+            <name>ObjectDB Repository</name>
+            <url>http://m2.objectdb.com</url>
+        </repository>
+    </repositories>
+    
     <dependencies>
         <dependency>
             <groupId>com.github.naoghuman</groupId>
             <artifactId>lib-action</artifactId>
-            <version>0.5.1</version>
+            <version>0.6.0</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.github.naoghuman</groupId>
+            <artifactId>lib-database-objectdb</artifactId>
+            <version>0.6.0</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.github.naoghuman</groupId>
             <artifactId>lib-logger</artifactId>
-            <version>0.5.1</version>
+            <version>0.6.0</version>
             <type>jar</type>
         </dependency>
         <dependency>
@@ -149,6 +168,12 @@
             <artifactId>afterburner.fx</artifactId>
             <version>1.7.0</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+            <type>jar</type>
         </dependency>
         
         <dependency>
